Minor cosmetic changes. Added some initial jvm configuration options.